--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -1,13 +1,10 @@
 @import "../style/font-face.css";
 @import "tailwindcss";
 
-@layer base {
-  html {
-    font-family: 'Bricolage Grotesque', sans-serif;
-  }
-}
-
 :root {
+  --tw-font-sans: 'SNSF', ui-sans-serif, system-ui, -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
+    sans-serif;
   /* --background: #ffffff; */
   /* --foreground: #171717; */
 }
@@ -27,13 +24,9 @@
 }
 
 body {
-  /* background: var(--background); */
   color: var(--foreground);
-  font-family: 'Bricolage Grotesque', sans-serif;
-}
-
-
-
+  font-family: var(--tw-font-sans);
+} 
 
 canvas {
   touch-action: none;
