--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -2,11 +2,12 @@
 @import "tailwindcss";
 
 :root {
-  --tw-font-sans: 'SF Pro Display', ui-sans-serif, system-ui, -apple-system,
+  --tw-font-sans: 'Bricolage Grotesque', ui-sans-serif, system-ui, -apple-system,
     BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
-    sans-serif;
+    sans-serif; 
   /* --background: #ffffff; */
   /* --foreground: #171717; */
+  /* // SF Pro Display */
 }
 
 @theme inline {
@@ -22,7 +23,11 @@
     /* --foreground: #ededed; */
   }
 } 
- 
+
+html, body {
+  -ms-overflow-style: none; /* IE & Edge */
+  scrollbar-width: none;    /* Firefox */
+}
 
 body {
   color: var(--foreground);
@@ -32,3 +37,9 @@ body {
 canvas {
   touch-action: none;
 }
+
+
+::-webkit-scrollbar {
+  display: none;
+}
+
