--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -2,12 +2,12 @@
 @import "tailwindcss";
 
 :root {
-  --tw-font-sans: 'Bricolage Grotesque', ui-sans-serif, system-ui, -apple-system,
+  --tw-font-sans: 'SF Pro Display', ui-sans-serif, system-ui, -apple-system,
     BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
     sans-serif; 
   /* --background: #ffffff; */
   /* --foreground: #171717; */
-  /* // SF Pro Display */
+  /* // SF Pro Display , Bricolage Grotesque*/
 }
 
 @theme inline {
