--- a/client/style/font-facex.css
+++ b/client/style/font-facex.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap');
 
 
 /* SNSF - Helvetica Neue Desk Interface Variants */
